# ecpc

./: .gitignore  .gitmodules  0_buildSoftware.py  1_createTestScene.py  2_trackMarker.py  3_calibrateCameras.py  4_estimateDepth.py  5_evaluate.py  README.md  globalSetup.py
Calibrator/: calibrateCameras.py  calibrator.py  parameters.py  utils.py
DepthEstimator/: estimation_params.json
MarkerTracker/: CMakeLists.txt
MarkerTracker/src/: Blob.cpp  Blob.h  BlobDetector.cpp  BlobDetector.h  BlobTracker.cpp  BlobTracker.h  CaptureYUV.cpp  FileManager.cpp  FileManager.h  main.cpp  utils.h
samples/calibration/: initialParams.json  markerPositions.txt  run.bat
samples/markerTracking/: maskList.txt  runMarkerTracker.bat  seqList.txt
scripts/: calcBadMatchedPixels.py  convertMP42YUV.py  convertPNG2YUV.py  copyProperIntrinsicAndInitExtrinsicsBySomething.py  createBackground.py  createFilenameListsForIVDE.py  extractMarker.py  makeYUVLists.py  pyraw_nano.py  removePNGandYUV.py  renderBlenderMVD.py  rescaleParamsForEvaluation.py
